--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <script  type ="text/javascript" src="script.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
+<body>
+  <h1>                   Mad Libs </h1>
+  <p id="demo"></p>
+</body>
   </html>
-  <p id="demo">
-
-</p>
